Handle multiple files for open orders